== 1.2.0

- Drop compatibility with earlier versions of Bundler -- Bundler has
  changed a lot in a short period of time, so I'm expecting the number
  of people depending on 0.8 or 0.9 to be small. Please use Warbler
  1.2.0 with applications that depend on Bundler 1.0 or higher.
- Add 'compiled' feature: With this feature added to config.features
  Warbler will pre-compile all Ruby files and will not ship the
  original Ruby source in your war file.

== 1.1.0

- Add concept of "features" -- small Rake tasks that run before the
  creation of the war file and make manipulations to the war file
  structure.
- Add 'gemjar' feature: Bundle all gems into a gems.jar to reduce the
  number of files in the archive (mostly useful for Google AppEngine).
  Usage: run "warble gemjar war" or set config.features = %w(gemjar) in
  warble.rb to use this feature.
- Add 'executable' feature: Bundle an embedded web server in the war
  file so that the entire application can be run as
  'java -jar myapp.war'.
  Usage: run "warble executable war" or set config.features = %w(executable)
  in warble.rb to use this feature.
  To see embedded webserver options, add '--help' to the 'java -jar'
  command line.
- No longer embed config.ru in web.xml as 'rackup' parameter by
  default. Instead, config.ru is included in the war file.
- Bump jruby-rack version requirement to 0.9.8.

== 1.0.3

- Tracking recent Bundler changes - handle locked Gemfiles differently
  than unlocked ones
- Handle file-based symlinks, and warn about inoperational directory
  symlinks under non-JRuby versions of Ruby.

== 1.0.2

- Add 'warble pluginize' task back. This task now just creates a
  vendor/plugins/warbler/tasks/warbler.rake file. There's no need to
  "vendor" all of Warbler into your application anymore.

== 1.0.1

- Fix careless bug where Warbler doesn't work with JRuby 1.4

== 1.0

- Warbler hits 1.0! There are enough structural changes in Warbler